aligns all items to center in HEADSHOT/fix

--- a/style.css
+++ b/style.css
@@ -98,7 +98,8 @@ nav .right a span{
 .hero-section .headshot {
     flex: 2;
     display: flex;
-    justify-content: right;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero-section .headshot img {
